fix: ux top spacing fix

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -129,7 +129,7 @@ div.contentGrid
   div.contentGrid
     max-width: 878px
     margin: 0 auto
-    padding: 0
+    padding: 8px
 
 .dont-break-out
   /* These are technically the same, but use both */
